fix: fix uneven image

--- a/style.css
+++ b/style.css
@@ -26,13 +26,13 @@ body {
 	border-radius: 50%;
 	text-align: center;
 	position: absolute;
-	transform: translate(-50%, -70%);
+	transform: translate(-50%, -50%);
 	left: 50%;
 }
 
 .content {
 	filter: blur(0);
-	margin-top: 45px;
+	margin-top: 75px;
 	text-align: center;
 }
 
